# rustDemo

./: .env  .gitignore  Cargo.toml  README.md  common.rs  main.rs  service.rs
controllers/: mod.rs  user_ctrl.rs
models/: mod.rs  user.rs
services/: auth.rs  mod.rs  user_service.rs
utils/: auth.rs  db.rs  helpers.rs  logger.rs  mod.rs
