[[bin]]
name = "demo"
path = "main.rs"

[package]
name = "demo"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
lambda_http = "0.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }