[[bin]]
name = "Events"
path = "main.rs"


[package]
name = "Events"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
lambda_http = "0.10"
tower = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1.11", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9.2"
